# CPU-Inference-Experiments

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
cpu_inference_workspace/: bert_experiments.py  resnet_experiments.py
cpu_inference_workspace/bert/: bert.py  bert_datasets.py  bert_optimizations.py  bert_quant.py
cpu_inference_workspace/resnet/: bottleneck_quant.py  resnet_dataset.py  resnet_optimizations.py  resnet_quant.py
infrastructure/: README.md  main.tf  outputs.tf  variables.tf
results/: LICENSE.md  bert-cpu-experiments-1757804244.csv  plot.py  resnet-cpu-experiments-1757793025.csv
