[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cpu-inference-workspace"
version = "0.0.1"
description = ""
authors = ["Jeffrey Wigger"]
readme = "README.md"
license = "MIT"

[tool.poetry.group.dev.dependencies]
ruff = "~0.4.10"
mypy = "^1.10.0"


[tool.poetry.dependencies]
python = ">=3.11"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.7.0%2Bcpu-cp312-cp312-manylinux_2_28_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cpu/torchvision-0.22.0%2Bcpu-cp312-cp312-manylinux_2_28_x86_64.whl"}
torchao = "^0.9.0"
numpy = "<2.3.0"
jupyterlab = "^4.2.3"
onnxscript = "^0.4.0"
onnxruntime = "^1.22.0"
fastapi = "^0.115.3"
httpx = "^0.27.0"
fast_dynamic_batcher = "~1.0.1"
openvino = "2025.2.0"
intel-extension-for-pytorch = "2.7.0"
oneccl-bind-pt = {version = "2.7.0", source = "intel"}
datasets = "==4.0.*"
transformers = "==4.56.*"
evaluate = "==0.4.*"
tqdm = "^4.67.1"
scikit-learn = "^1.7.1"
accelerate = "^1.10.1"
sentencepiece = "^0.2.1"


[[tool.poetry.source]]
name = "intel"
url = "https://pytorch-extension.intel.com/release-whl/stable/cpu/us/"
priority = "supplemental"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]


[tool.ruff]
extend-select = [
  "B",    # flake8-bugbear
  "B904",
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # Ruff-specific
  "UP",   # pyupgrade
]
extend-ignore = [
  "E501",   # Line too long
  "E741",   # Ambiguous variable name
]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1
known-first-party = ["mlops_inference_workspace"]
